--- a/HeadTrackerV2/Properties/Settings.settings
+++ b/HeadTrackerV2/Properties/Settings.settings
@@ -50,5 +50,8 @@
     <Setting Name="rollLimit" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="smoothness" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
