--- a/HeadTrackerV2/Properties/Settings.settings
+++ b/HeadTrackerV2/Properties/Settings.settings
@@ -53,5 +53,8 @@
     <Setting Name="smoothness" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="useExp" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
